--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "dependencies": {
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/core": "5.0.0",
-    "@angular/forms": "5.0.0",
+    "@angular/common": "7.2.15",
+    "@angular/compiler": "7.2.15",
+    "@angular/core": "7.2.15",
+    "@angular/forms": "7.2.15",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
-    "@angular/router": "5.0.0",
+    "@angular/platform-browser": "7.2.15",
+    "@angular/platform-browser-dynamic": "7.2.15",
+    "@angular/router": "7.2.15",
     "core-js": "2.5.1",
-    "rxjs": "5.5.2",
-    "zone.js": "0.8.18"
+    "rxjs": "6.5.2",
+    "tslib": "^1.9.0",
+    "zone.js": "0.8.29",
+    "rxjs-compat": "^6.0.0-rc.0"
   },
   "scripts": {
     "ng": "ng",
@@ -27,9 +29,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "~7.0.2",
+    "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "~7.0.0",
+    "@angular/language-service": "~7.2.15",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -41,9 +43,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.12.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.2.4"
   }
 }
